Bug 1366875. Apply the same sync decoding heuristic to SVG <image> as we do to HTML <img>. r=mats